# pydanticai-evals

./: .gitignore  README.md  pyproject.toml
agent/: __init__.py  main.py  models.py  run.py
data/: seed_db.py
data/fixtures/: internal_docs.json
docs/: agent-flow.html
shared/: observability.py  tools.py  trace.py  types.py
tests/: test_agent.py  test_seed_db.py  test_shared_tools.py
